fix: Paint Canvas - fixed eraser - restructured CSS styling - Correctly implemented the paint canvas into the navigationManager