@@ -1,4 +1,4 @@
-
+// PaintCanvasController.java
 package edu.ntnu.idi.idatt.controller.paint;
 
 import edu.ntnu.idi.idatt.model.paint.PaintModel;
@@ -27,37 +27,41 @@ public class PaintCanvasController implements PaintModel.Observer {
     this.view = view;
     model.addObserver(this);
     initView();
-    onModelChanged();
+    onModelChanged();  // set initial undo/redo state
   }
 
   private void initView() {
     final GraphicsContext gc = view.getCanvas().getGraphicsContext2D();
 
+    // 1) Tool toggles
     view.getToolButtons().forEach((type, btn) ->
         btn.setOnAction(e -> currentTool = type)
     );
 
+    // 2) Color picker (only for pencil)
     view.getColorPicker().setOnAction(e ->
         currentColor = view.getColorPicker().getValue()
     );
 
+    // 3) Width slider
     view.getSizeSlider().valueProperty().addListener((obs, oldVal, newVal) ->
         currentWidth = newVal.doubleValue()
     );
 
+    // 4) Undo / Redo / Clear
     view.getUndoButton().setOnAction(e -> model.undo());
     view.getRedoButton().setOnAction(e -> model.redo());
     view.getClearButton().setOnAction(e -> model.clear());
 
+    // 5) Freehand drawing
     view.getCanvas().setOnMousePressed(e -> {
       currentPoints = new ArrayList<>();
       currentPoints.add(new Point2D(e.getX(), e.getY()));
     });
 
     view.getCanvas().setOnMouseDragged(e -> {
-      double x = e.getX();
-      double y = e.getY();
-      Point2D last = currentPoints.get(currentPoints.size() - 1);
+      double x = e.getX(), y = e.getY();
+      Point2D last = currentPoints.getLast();
       currentPoints.add(new Point2D(x, y));
 
       Color drawColor = (currentTool == ToolType.ERASER)
@@ -92,15 +96,12 @@ public class PaintCanvasController implements PaintModel.Observer {
         view.getCanvas().getWidth(),
         view.getCanvas().getHeight()
     );
-
-    List<Stroke> strokes = model.getStrokes();
-    for (Stroke s : strokes) {
+    for (Stroke s : model.getStrokes()) {
       gc.setStroke(s.getColor());
       gc.setLineWidth(s.getWidth());
       List<Point2D> pts = s.getPoints();
       for (int i = 1; i < pts.size(); i++) {
-        Point2D p0 = pts.get(i - 1);
-        Point2D p1 = pts.get(i);
+        Point2D p0 = pts.get(i - 1), p1 = pts.get(i);
         gc.strokeLine(p0.getX(), p0.getY(), p1.getX(), p1.getY());
       }
     }
